# rakvzan-BEST-HACKath0n-2025

./: .gitignore  README.md
.github/workflows/: codestyle.yml
backend/: .env.example  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
backend/docker_compose/adminer/: docker-compose-prod.yml  docker-compose.yml
backend/docker_compose/apm/: docker-compose.yml
backend/docker_compose/db/: backup-prod.sh  docker-compose-prod.yml  docker-compose.yml
backend/docker_compose/db/backups/: backup_2025-04-13.sql
backend/docker_compose/django/: docker-compose-prod.yml  docker-compose.yml
backend/docker_compose/elastic/: docker-compose.yml
backend/docker_compose/fastapi/: Dockerfile  docker-compose-prod.yml  docker-compose.yml
backend/docker_compose/kibana/: docker-compose.yml
backend/docker_compose/nginx/: Dockerfile-prod  nginx-prod.conf  nginx.conf
backend/docker_compose/pgadmin/: docker-compose-prod.yml  docker-compose.yml
backend/fastapi/: main.py
backend/requirements/: base-requirements.txt  fastapi.txt
backend/src/: celery_app.py  manage.py
backend/src/api/: meta.py  urls.py
backend/src/api/v1/: urls.py
backend/src/api/v1/drf/: schemas.py  urls.py
backend/src/api/v1/drf/auth/: urls.py
backend/src/api/v1/drf/auth/serializers/: __init__.py  auth.py  password.py  profile.py  two_factor.py
backend/src/api/v1/drf/auth/views/: __init__.py  auth.py  password.py  profile.py  two_factor.py
backend/src/api/v1/drf/profiles/: urls.py
backend/src/api/v1/drf/profiles/serializers/: __init__.py  comments.py  setup.py
backend/src/api/v1/drf/profiles/views/: __init__.py  setup.py
backend/src/api/v1/ninja/: base_schemas.py  filters.py  urls.py
backend/src/api/v1/ninja/auth/: google.py
backend/src/api/v1/ninja/establishment/: handlers.py  schemas.py
backend/src/apps/auth/: managers.py
backend/src/apps/auth/models/: user.py
backend/src/apps/auth/services/: emails.py  qr_code.py
backend/src/apps/common/: middlewares.py  models.py  permissions.py  repositories.py
backend/src/apps/establishments/: admin.py  apps.py  entities.py  enums.py
backend/src/apps/establishments/migrations/: 0001_initial.py  0002_comment_raiting_establishment_has_wifi_and_more.py  0003_alter_establishment_address_and_more.py  0004_establishment_latitude_establishment_longitude.py  0005_comment_created_at_comment_updated_at_and_more.py
backend/src/apps/establishments/models/: __init__.py  comments.py  enums.py  establishments.py  helpers.py
backend/src/apps/establishments/services/: comments.py  establishments.py  routes.py
backend/src/apps/profiles/: apps.py
backend/src/apps/users/: managers.py
backend/src/apps/users/migrations/: 0001_initial.py  0002_user_first_name_user_last_name.py
backend/src/apps/users/models/: user.py
backend/src/apps/users/services/: emails.py  tokens.py
backend/src/apps/users/templates/email/: deactivate_user.html  delete_user.html  email_verification.html  password_reset.html
backend/src/config/: asgi.py  dashboard.py  routers.py  urls.py  wsgi.py
backend/src/config/settings/: local.py  main.py
backend/src/config/settings/components/: api.py  apps.py  auth.py  boilerplate.py  celery.py  database.py  elastic.py  logging_comp.py  media.py  middleware.py  smtp.py  static.py  templates.py
backend/src/templtes/email/: email_verification.html
frontend/: .env.example  makefile  package-lock.json  package.json
frontend/docker_compose/front/: Dockerfile  docker-compose-prod.yml  docker-compose.yml
frontend/docker_compose/front/env/: .env.example
frontend/docker_compose/nginx/: Dockerfile  Dockerfile-prod  nginx-prod.conf  nginx.conf
frontend/src/: App.tsx  theme.d.ts
frontend/src/app/: baseQuery.ts  baseStore.ts  config.ts
frontend/src/app/store/: authMenuSlice.ts  detailMarkerSlice.ts
frontend/src/features/auth/: authApi.ts
frontend/src/features/auth/loginPage/: LoginPage.tsx  RegisterForm.tsx  loginForm.tsx
frontend/src/features/contact/: ContactForm.tsx  ContactPage.tsx
frontend/src/features/layouts/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/features/layouts/Footer/: Footer.tsx
frontend/src/features/layouts/Header/: Header.tsx
frontend/src/features/loadImageComponent/: LoadImage.tsx
frontend/src/features/mainPage/: MainPage.tsx
frontend/src/features/mainPage/assets/: descriptionItems.tsx
frontend/src/features/mainPage/components/: DescriptionComponent.tsx  Greetings.tsx  MapContainer.tsx
frontend/src/features/map/: MapPage.tsx  mapSLice.ts
frontend/src/features/map/components/: Comment.tsx  CreateComentModal.tsx  CreateMarkerModal.tsx  CustomMarker.tsx  MapFilterPanel.tsx  MarkerDetailView.tsx  MarkerIconComponent.tsx  RoutingMachine.tsx
frontend/src/features/map/slices/: commentSLice.ts  mapSLice.ts  markerSlices.ts
frontend/src/features/pages/mock/: FirstMockPage.tsx
frontend/src/features/userPage/: UserPage.tsx  userSLice.ts
frontend/src/routes/: routes.tsx
frontend/src/theme/overrides/: typography.ts
frontend/src/types/: baseCoorsType.ts  descritopnType.ts  routersTypes.ts
frontend/src/utils/: getAccessibilityList.ts  unpackPrams.ts
(+3 files in other folders)
