[tool.poetry]
name = "rakvzan-best-hackath0n-2025"
version = "0.1.0"
description = ""
authors = ["Oleksandr Yanchar <contact.oleksandryanchar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
